--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
     "bootstrap": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "0.9.x",
-    "reactstrap": "^5.0.0-beta.2"
+    "react-scripts": "0.9.x"
   },
   "devDependencies": {},
   "scripts": {
