--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
     "mongoose": "^5.0.9",
-    "morgan": "^1.9.0",
-    "request": "^2.85.0"
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
