--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "react": "^16.2.0",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.2.0",
     "react-scripts": "0.9.x"
   },
